2005-02-16  Mark McLoughlin  <markmc@redhat.com>

	* lib/config.py.in: upd Xnest command line.
	
	* lib/sources/filessource.py: fix typos.
	
	* sabayon.spec.in: don't set the homedir to
	/var/sabayon - we don't use that anymore.

2005-02-16  Mark McLoughlin  <markmc@redhat.com>

	* lib/userprofile.py:
	(ProfileChange): kill get_name(), get_type() and
	get_value(). Add get_id() and get_short_description().
	
	* lib/sources/filessource.py,
	  lib/sources/gconfsource.py,
	  lib/sources/mozillasource.py,
	  lib/sources/paneldelegate.py,
	  lib/sources/testsource.py: impl. new functions.
	
	* admin-tool/monitorwindow.py: update for ProfileChange
	changes.

2005-02-16  Mark McLoughlin  <markmc@redhat.com>

	* admin-tool/monitorwindow.py: change things around
	a bit so that we lose some of the columns in the list
	and the commit menu item. Now everything gets saved
	by default unless you toggle the "ignore" button for
	the change.

2005-02-16  Mark McLoughlin  <markmc@redhat.com>

	* admin-tool/sabayon.glade: add an about menu item.
	
	* admin-tool/monitorwindow.py: hook up the about
	dialog.
	
	* admin-tool/profilesdialog.py: set the window icon.
	
	* lib/Makefile.am, lib/config.py.in: add VERSION to
	the config.
	
	* lib/usermod.py: add a FIXME.

2005-02-16  Mark McLoughlin  <markmc@redhat.com>

	* admin-tool/profilesdialog.py: hook up "Base on" by
	just copying the profile we're basing the new one on.

2005-02-16  Mark McLoughlin  <markmc@redhat.com>

	* lib/config.py.in: add PROTOTYPE_USER.
	
	* admin-tool/profilesdialog.py: use it here.

2005-02-16  Mark McLoughlin  <markmc@redhat.com>

	* lib/config.py.in: add SKEL_HOMEDIR.
	
	* lib/usermod.py:
	(create_temporary_homedir): copy the contents of
	/etc/skel when creating the homedir.
	
	* lib/protosession.py:
	(__start_session): fix uid/gid mixup
	(__setup_shell_and_homedir):
	use usermod.create_temporary_homedir()

2005-02-16  Mark McLoughlin  <markmc@redhat.com>

	* lib/protosession.py: create a temporary homedir