@@ -1,3 +1,7 @@
+2005-02-17  Mark McLoughlin  <markmc@redhat.com>
+
+	* lib/sources/gconfsource.py: add some debugging.
+
 2005-02-16  Mark McLoughlin  <markmc@redhat.com>
 
 	* lib/config.py.in: upd Xnest command line.
